 SERVER-38909 Permit empty update modifiers, treating as a no-op rather than an error

(cherry picked from commit 96bc79c2fa95e40a917c71b4120257f8dca038d0)