src/mongo/db/update/update_driver.cpp
@@ -93,15 +93,6 @@ modifiertable::ModifierType validateMod(BSONElement mod) {
                           << mod
                           << "}",
             mod.type() == BSONType::Object);
-
-    uassert(ErrorCodes::FailedToParse,
-            str::stream() << "'" << mod.fieldName()
-                          << "' is empty. You must specify a field like so: "
-                             "{"
-                          << mod.fieldName()
-                          << ": {<field>: ...}}",
-            !mod.embeddedObject().isEmpty());
-
     return modType;
 }
 
